--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,13 @@
                 <artifactId>kaptcha</artifactId>
                 <version>2.3.2</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15on</artifactId>
+                <version>1.65</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
