--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
             <id>aodeng</id>
             <name>低调小熊猫</name>
             <email>java@aodeng.cc</email>
-            <url>http://ilovey.live</url>
+            <url>https://github.com/java-aodeng</url>
         </developer>
     </developers>
 
