--- a/pom.xml
+++ b/pom.xml
@@ -169,12 +169,7 @@
             <optional>true</optional>
         </dependency>
 
-        <!--<dependency>
-            <groupId>me.zhyd.oauth</groupId>
-            <artifactId>JustAuth</artifactId>
-            <version>1.16.0</version>
-        </dependency>-->
-
+        <!-- oauth springboot第三方授权登录-->
         <dependency>
             <groupId>com.xkcoding.justauth</groupId>
             <artifactId>justauth-spring-boot-starter</artifactId>
