--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -85,5 +85,10 @@
             <groupId>com.xkcoding.justauth</groupId>
             <artifactId>justauth-spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.upyun</groupId>
+            <artifactId>java-sdk</artifactId>
+        </dependency>
     </dependencies>
 </project>
