--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -90,5 +90,10 @@
             <groupId>com.upyun</groupId>
             <artifactId>java-sdk</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>net.sf.image4j</groupId>
+            <artifactId>image4j</artifactId>
+        </dependency>
     </dependencies>
 </project>
