又拍云附件上传，附件删除 SDK版本：4.2.3

--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -20,8 +20,7 @@ spring:
   #数据库配置
   datasource:
       driver-class-name: com.mysql.jdbc.Driver
-      #url: jdbc:mysql://localhost:3306/hope?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-      url: jdbc:mysql://39.99.190.224:3306/yt-devicedb-test?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+      url: jdbc:mysql://localhost:3306/hope?useUnicode=true&characterEncoding=UTF-8&useSSL=false
       username: root
       password: root
       type: com.alibaba.druid.pool.DruidDataSource
@@ -33,7 +32,7 @@ spring:
   # Redis
   redis:
       database: 12
-      host: 39.99.190.224
+      host: localhost
       port: 6379
       #密码默认为空，注释即可，要添加密码，去掉注释添加就行
       #password:
