--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -19,19 +19,32 @@ spring:
     active: dev
   #数据库配置
   datasource:
-      driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/hope?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+      type: com.zaxxer.hikari.HikariDataSource
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/yt-devicedb-test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
       username: root
       password: root
-      type: com.alibaba.druid.pool.DruidDataSource
-      initial-size: 1
-      minIdle: 3
-      maxActive: 20
-      maxWait: 60000
-      filters: stat,wall,slf4j
+      # 连接池
+      hikari:
+        #连接池名
+        pool-name: DateHikariCP
+        #最小空闲连接数
+        minimum-idle: 5
+        # 空闲连接存活最大时间，默认600000（10分钟）
+        idle-timeout: 180000
+        # 连接池最大连接数，默认是10
+        maximum-pool-size: 10
+        # 此属性控制从池返回的连接的默认自动提交行为,默认值：true
+        auto-commit: true
+        # 此属性控制池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
+        max-lifetime: 1800000
+        # 数据库连接超时时间,默认30秒，即30000
+        connection-timeout: 30000
+        connection-test-query: SELECT 1
   # Redis
   redis:
       database: 12
+      #host: localhost
       host: localhost
       port: 6379
       #密码默认为空，注释即可，要添加密码，去掉注释添加就行
