--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -21,7 +21,7 @@ spring:
   datasource:
       type: com.zaxxer.hikari.HikariDataSource
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://39.99.190.224:3306/yt-devicedb-test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+      url: jdbc:mysql://:3306/yt-devicedb-test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
       username: root
       password: root
       # 连接池
@@ -44,8 +44,7 @@ spring:
   # Redis
   redis:
       database: 12
-      #host: localhost
-      host: 39.99.190.224
+      host:
       port: 6379
       #密码默认为空，注释即可，要添加密码，去掉注释添加就行
       #password:
