- 邮件发送，发送文本邮件，html邮件，附件邮件，邮件发送excel附件

--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -129,5 +129,5 @@ upyun:
 
 hope:
     work-dir: ${user.home}/.hope/${spring.profiles.active}/
-    server-host-ip:
+    server-host-ip: 127.0.0.1
 
