--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <!--子模块依赖声明-->
+    <!--子模块依赖版本声明-->
     <dependencyManagement>
         <dependencies>
 
@@ -169,6 +169,7 @@
                 <artifactId>spring-boot-starter-aop</artifactId>
                 <version>2.5.3</version>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -198,5 +199,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+
     </dependencies>
 </project>
