tomcat进行了一个优化配置

--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -4,6 +4,11 @@ server:
       uri-encoding: utf-8
       #指定文件上传服务器临时目录，避免服务器自动清理目录的问题 “.”表示项目启动目录
       basedir: ${hope.work-dir}
+      #对tomcat进行了一个优化配置，最大线程数是100，初始化线程是20
+      min-spare-threads: 20
+      max-threads: 100
+  #超时时间是5000ms
+  connection-timeout: 5000
   # HTTP请求和响应头的最大量，以字节为单位，默认值为4096字节,超过此长度的部分不予处理,一般8K。解决java.io.EOFException: null问题
   max-http-header-size: 8192
   use-forward-headers: true
