--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>mybatis-plus-generator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
