--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,26 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <mybatis-plus-boot-starter-version>3.4.3</mybatis-plus-boot-starter-version>
+        <hutool-all-version>5.6.5</hutool-all-version>
+        <mysql-connector-java-version>6.0.6</mysql-connector-java-version>
+        <fastjson-version>1.2.70</fastjson-version>
+        <commons-lang3-version>3.9</commons-lang3-version>
+        <aliyun-java-sdk-core-version>4.5.3</aliyun-java-sdk-core-version>
+        <commons-io-version>2.5</commons-io-version>
+        <spring-boot-starter-aop-version>2.5.3</spring-boot-starter-aop-version>
+        <flyway-core-version>7.0.0</flyway-core-version>
+        <magic-api-spring-boot-starter-version>1.4.5</magic-api-spring-boot-starter-version>
+        <mybatis-plus-generator-version>3.4.1</mybatis-plus-generator-version>
+        <easypoi-spring-boot-starter-version>4.0.0</easypoi-spring-boot-starter-version>
+        <commons-net-version>3.6</commons-net-version>
+        <commons-fileupload-version>1.3.3</commons-fileupload-version>
+        <poi-ooxml-version>4.1.2</poi-ooxml-version>
+        <kaptcha-version>2.3.2</kaptcha-version>
+        <bcprov-jdk15on-version>1.65</bcprov-jdk15on-version>
+        <justauth-spring-boot-starter-version>1.4.0</justauth-spring-boot-starter-version>
+        <java-sdk-version>4.2.3</java-sdk-version>
+        <image4j-version>0.7zensight1</image4j-version>
     </properties>
 
     <!--子模块依赖版本声明-->
@@ -63,137 +83,137 @@
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
-                <version>3.4.3</version>
+                <version>${mybatis-plus-boot-starter-version}</version>
             </dependency>
 
             <!--hutool-->
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
-                <version>5.6.5</version>
+                <version>${hutool-all-version}</version>
             </dependency>
 
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>6.0.6</version>
+                <version>${mysql-connector-java-version}</version>
             </dependency>
 
             <!-- JSON 解析器和生成器 -->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
-                <version>1.2.70</version>
+                <version>${fastjson-version}</version>
             </dependency>
 
             <!-- 常用工具类 -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>3.9</version>
+                <version>${commons-lang3-version}</version>
             </dependency>
 
             <!-- 阿里云短信接口 -->
             <dependency>
                 <groupId>com.aliyun</groupId>
                 <artifactId>aliyun-java-sdk-core</artifactId>
-                <version>4.5.3</version>
+                <version>${aliyun-java-sdk-core-version}</version>
             </dependency>
 
             <!-- io常用工具类 -->
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.5</version>
+                <version>${commons-io-version}</version>
             </dependency>
 
             <!-- FTP文件上传 Apache 的一个工具包 commons-net -->
             <dependency>
                 <groupId>commons-net</groupId>
                 <artifactId>commons-net</artifactId>
-                <version>3.6</version>
+                <version>${commons-net-version}</version>
             </dependency>
 
             <!-- 文件上传工具类 -->
             <dependency>
                 <groupId>commons-fileupload</groupId>
                 <artifactId>commons-fileupload</artifactId>
-                <version>1.3.3</version>
+                <version>${commons-fileupload-version}</version>
             </dependency>
 
             <!-- excel工具 -->
             <dependency>
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
-                <version>4.1.2</version>
+                <version>${poi-ooxml-version}</version>
             </dependency>
 
             <!-- kaptcha 验证码 -->
             <dependency>
                 <groupId>com.github.penggle</groupId>
                 <artifactId>kaptcha</artifactId>
-                <version>2.3.2</version>
+                <version>${kaptcha-version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk15on</artifactId>
-                <version>1.65</version>
+                <version>${bcprov-jdk15on-version}</version>
             </dependency>
 
             <!-- oauth springboot第三方授权登录-->
             <dependency>
                 <groupId>com.xkcoding.justauth</groupId>
                 <artifactId>justauth-spring-boot-starter</artifactId>
-                <version>1.4.0</version>
+                <version>${justauth-spring-boot-starter-version}</version>
             </dependency>
 
             <!-- 又拍云存储 Java SDK -->
             <dependency>
                 <groupId>com.upyun</groupId>
                 <artifactId>java-sdk</artifactId>
-                <version>4.2.3</version>
+                <version>${java-sdk-version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/net.sf.image4j/image4j -->
             <dependency>
                 <groupId>net.sf.image4j</groupId>
                 <artifactId>image4j</artifactId>
-                <version>0.7zensight1</version>
+                <version>${image4j-version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-aop</artifactId>
-                <version>2.5.3</version>
+                <version>${spring-boot-starter-aop-version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-core</artifactId>
-                <version>7.0.0</version>
+                <version>${flyway-core-version}</version>
             </dependency>
 
             <!-- 以spring-boot-starter的方式引用 -->
             <dependency>
                 <groupId>org.ssssssss</groupId>
                 <artifactId>magic-api-spring-boot-starter</artifactId>
-                <version>1.4.5</version>
+                <version>${magic-api-spring-boot-starter-version}</version>
             </dependency>
 
             <!-- mybatis-plus-generator -->
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-generator</artifactId>
-                <version>3.4.1</version>
+                <version>${mybatis-plus-generator-version}</version>
             </dependency>
 
             <dependency>
                 <groupId>cn.afterturn</groupId>
                 <artifactId>easypoi-spring-boot-starter</artifactId>
-                <version>4.0.0</version>
+                <version>${easypoi-spring-boot-starter-version}</version>
             </dependency>
 
         </dependencies>
